--- a/backend_frontend_zsolti/bejelentkezes.html
+++ b/backend_frontend_zsolti/bejelentkezes.html
@@ -37,15 +37,18 @@
     <img src="LOGO3.png" width=400px height=250px>
     </div>
     <br><br><br>
-    <div class="regisztraciofelirat"><h1 id="h1">Bejelentkezés</h1></div>
-    <div class="regisztracio">
+    <div class="bejelentkezesfelirat"><h1 id="h1_2">Bejelentkezés</h1></div>
+    <div class="bejelentkezes">
     <form>
-        <h4 class="nev">Felhasználónév</h4>
-            <input type="text" name="email" id="email"> <br>
-        <h4 class="nev">Jelszó</h4>
-            <input type="text" name="email" id="email"> <br>
-        </label><br>
-        <button type="submit">Bejelentkezés</button>
+        <div id="nev">
+            <h4 class="nev">Felhasználónév</h4>
+            <input type="text" id="felhasználónév" placeholder="" class="szam"><br>
+        </div>
+        <div id="nev">
+            <h4 class="nev">Jelszó</h4>
+            <input type="text" id="jelszo" placeholder="" class="szam"><br>
+        </div><br>
+        <button type="submit" id="bejelentkezesbutton">Bejelentkezés</button>
     </form>
     </div>
     <br><br><br>
