--- a/backend_frontend_zsolti/fizetes.html
+++ b/backend_frontend_zsolti/fizetes.html
@@ -44,9 +44,16 @@
     <div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
     </div>
-    <br><br>
-    <h3>Impresszum</h3><br><br><br><br><br>
-    <div></div>
+    <div id="div12" >
+        <p id="kosar">Fizetés</p>
+         <div id="fizetesszoveg">
+            Weboldalunkon jelenleg csak banki átutalással lehet fizetni. A megrendelés leadását követően az Ön e-mail címére egy díjbekérőt küldünk, amelyben az utaláshoz szükséges információk szerepelnek. A kész weboldalt weboldalt csak az utalás beérkezése után áll módunkban átadni.
+            <div id="fizetes_megrendeles">
+                <div id="fizetesgomb"> <a href="sikeresrendeles.html" onclick=megrendeles()>Megrendelés</a> </div>
+            </div>
+        </div>
+        
+    </div>
     <footer> 
     <div id="div6">
         <ul id="elerhetoseg">
