--- a/backend_frontend_zsolti/logingyik.html
+++ b/backend_frontend_zsolti/logingyik.html
@@ -20,6 +20,10 @@
                     <p>Kosár</p>
                     <span>></span>
                 </a>
+                <a href="rendelesek.html" class="sub-menu-link">
+                    <p>Rendeléseim</p>
+                    <span>></span>
+                </a>
                 <a href="fooldal.html" onclick="myFunction()" class="sub-menu-link">
                     <p>Kijelentkezés</p>
                     <span>></span>
@@ -31,15 +35,16 @@
     <div id="div1">
     <div ><h1>YOU DESIGN, WE CREATE</h1></div>
     <ul id="menu">
-        <li class="active"><a href="loginfooldal.html">Főoldal</a></li>
-        <li ><a href="loginelerhetoseg.html">Elérhetőség</a></li>
-        <li><a href="logintervezes.html">Tervezés</a></li>
-        <li><a href="loginreferenciamunkak.html">Referencia munkáink</a></li>
+        <li class="active"><a href="fooldal.html">Főoldal</a></li>
+        <li ><a href="elerhetoseg.html">Elérhetőség</a></li>
+        <li><a href="tervezes.html">Tervezés</a></li>
+        <li><a href="referenciamunkak.html">Referencia munkáink</a></li>
     </ul>
     </div>
     <div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
     </div>
+    <br><br>
     <h3>Gyakran ismételt kérdések</h3><br><br><br><br><br>
     <div></div>
     <footer> 
