--- a/backend_frontend_zsolti/profil.html
+++ b/backend_frontend_zsolti/profil.html
@@ -20,6 +20,10 @@
                     <p>Kosár</p>
                     <span>></span>
                 </a>
+                <a href="rendelesek.html" class="sub-menu-link">
+                    <p>Rendeléseim</p>
+                    <span>></span>
+                </a>
                 <a href="fooldal.html" onclick="myFunction()" class="sub-menu-link">
                     <p>Kijelentkezés</p>
                     <span>></span>
@@ -40,7 +44,25 @@
     <div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
     </div>
-    <div id="div3" ></div>
+    <div id="div10" >
+        <div id="profilom">PROFILOM</div>
+        <div id="adat"> <div id="adattartalom">Kiss József</div> </div>
+        <div id="cegadat">Név</div>
+        <div id="adat"> <div id="adattartalom">Audi Hungária Zrt.</div> </div>
+        <div id="cegadat">Cégnév</div>
+        <div id="adat"> <div id="adattartalom">kissjozsef@gmail.com</div> </div>
+        <div id="cegadat">Email</div>
+        <div id="adat"> <div id="adattartalom">06 20 256 1789</div> </div>
+        <div id="cegadat">Telefon</div>
+        <div id="adat"> <div id="adattartalom">Audi Hungária Út 1</div> </div>
+        <div id="cegadat">Székhely</div>
+        <div id="adat"> <div id="adattartalom">	23391475208</div> </div>
+        <div id="cegadat">Adószám</div>
+        <div id="adat"> <div id="adattartalom">	08 10 001840</div> </div>
+        <div id="cegadat">Cégjegyzékszám</div>
+        <div id="adat"> <div id="adattartalom">Audi0101</div> </div>
+        <div id="cegadat">Jelszó</div>
+    </div>
     <footer> 
     <div id="div6">
         <ul id="elerhetoseg">
