--- a/backend_frontend_zsolti/loginfooldal.html
+++ b/backend_frontend_zsolti/loginfooldal.html
@@ -20,6 +20,10 @@
                     <p>Kosár</p>
                     <span>></span>
                 </a>
+                <a href="rendelesek.html" class="sub-menu-link">
+                    <p>Rendeléseim</p>
+                    <span>></span>
+                </a>
                 <a href="fooldal.html" onclick="myFunction()" class="sub-menu-link">
                     <p>Kijelentkezés</p>
                     <span>></span>
