--- a/backend_frontend_zsolti/logintervezes.html
+++ b/backend_frontend_zsolti/logintervezes.html
@@ -20,6 +20,10 @@
                     <p>Kosár</p>
                     <span>></span>
                 </a>
+                <a href="rendelesek.html" class="sub-menu-link">
+                    <p>Rendeléseim</p>
+                    <span>></span>
+                </a>
                 <a href="fooldal.html" onclick="myFunction()" class="sub-menu-link">
                     <p>Kijelentkezés</p>
                     <span>></span>
@@ -40,7 +44,9 @@
     <div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
     </div>
-    <div id="div3" ></div>
+    <div id="div9" class="tervezes">
+        <button type="submit" id="tervezesbutton">Tervezés megkezdése</a></button>
+    </div>
     <footer> 
     <div id="div6">
         <ul id="elerhetoseg">
