--- a/backend_frontend_zsolti/rendelesek.html
+++ b/backend_frontend_zsolti/rendelesek.html
@@ -31,8 +31,8 @@
             </div>
         </div>
     </nav>
-    <br><br><br><br>
-    <div id="div1">
+<br><br><br><br>
+<div id="div1">
     <div ><h1>YOU DESIGN, WE CREATE</h1></div>
     <ul id="menu">
         <li class="active"><a href="loginfooldal.html">Főoldal</a></li>
@@ -40,14 +40,20 @@
         <li><a href="logintervezes.html">Tervezés</a></li>
         <li><a href="loginreferenciamunkak.html">Referencia munkáink</a></li>
     </ul>
-    </div>
-    <div id="div2">
+</div>
+<div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
-    </div>
-    <br><br>
-    <h3>Impresszum</h3><br><br><br><br><br>
-    <div></div>
-    <footer> 
+</div>
+<div id="div3" >
+<p id="kosar">Rendeléseim</p>
+ <div id="kosartartalom">
+    <div id="tervar">400 000 HUF</div>
+    <div id="tervszam">Weboldal terv 001</div>
+    <div id="statusz"> Folyamatban</div>
+    <div id="datum"> 2022.10.11 17:07</div>
+ </div>
+</div>
+<footer> 
     <div id="div6">
         <ul id="elerhetoseg">
             <li><a href=""><img src="telefonjel.png" width=15px height=17px> +36 20 256 1552</a></li>
@@ -57,13 +63,13 @@
     </div>
     <div id="div7">
         <ul id="adatvedelem">
-            <li><a href="logingyik.html">GYIK</a></li>
-            <li><a href="loginadatvedelem.html">Adatvédelem</a></li>
-            <li><a href="loginimpresszum.html">Ipresszum</a></li>
-            <li><a href="loginaltalanos.html">Általános szerződési feltételek</a></li>
+            <li><a href="gyik.html">GYIK</a></li>
+            <li><a href="adatvedelem.html">Adatvédelem</a></li>
+            <li><a href="impresszum.html">Ipresszum</a></li>
+            <li><a href="altalanos.html">Általános szerződési feltételek</a></li>
         </ul>
     </div>
-    </footer>
-    <script src="script.js"></script>
+</footer>
+ <script src="script.js"></script>
 </body>
 </html>
