--- a/backend_frontend_zsolti/tervezes.html
+++ b/backend_frontend_zsolti/tervezes.html
@@ -36,7 +36,7 @@
     <div id="div2">
     <img src="LOGO3.png" width=400px height=250px>
     </div>
-    <div id="div3" ></div>
+    <div id="div8" class="tervezes">Jelntkezz be a tervezéshez</div>
     <footer> 
     <div id="div6">
         <ul id="elerhetoseg">
